--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
